@@ -4,7 +4,7 @@ import kind.table.Table;
 import kind.table.TableBuilder;
 import org.junit.Test;
 
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static org.junit.Assert.*;
 
@@ -13,7 +13,7 @@ public class CsvReaderTest {
 
     @Test
     public void test_read() {
-        final CsvReader reader = new CsvReader(Path.of("./test-data/pub/", "hw_25000.csv"));
+        final CsvReader reader = new CsvReader(Paths.get("./test-data/pub/", "hw_25000.csv"));
 
         final Table table = new TableBuilder()
                 .withTableReader(reader)
