@@ -7,7 +7,7 @@ import kind.table.cols.TsCol;
 import kind.table.cols.IntCol;
 import kind.table.funcs.Convert;
 
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.Duration;
 import java.time.Instant;
 
@@ -15,7 +15,7 @@ public class TestTableFactory {
 
     public static Table hw_25000() {
         return new TableBuilder()
-                .withCsvFile(Path.of("./test-data/pub/","hw_25000.csv"))
+                .withCsvFile(Paths.get("./test-data/pub/","hw_25000.csv"))
                 .build()
                 .eval(Convert.toDblCol("Height(Inches)"))
                 .eval(Convert.toDblCol("Weight(Pounds)"));
